Final version: tweaked conclusions and added refs

--- a/jors2015.bib
+++ b/jors2015.bib
@@ -443,3 +443,40 @@ journal = {Science}
   publisher = 	 {{Microsoft Research}},
   year = 	 {2009}
 }
+
+@Article{stodden-et-al:2015,
+  author = 	 {Victoria Stodden and Sheila Miguez and Jennifer Seiler},
+  title = 	 {{ResearchCompendia.org: Cyberinfrastructure for Reproducibility and Collaboration in Computational Science}},
+  journal = 	 {{Computing in Science \& Engineering}},
+  year = 	 {2015},
+  volume = 	 {17},
+  number = 	 {12}
+}
+
+@InProceedings{oabarriaga-et-al:2014,
+  author = 	 {S. Olabarriaga and G. Pierantoni and G. Taffoni and E. Sciacca and M. Jaghoori and V. Korkhov and G. Castelli and C. Vuerli and U. Becciani and E. Carley and B. Bentley},
+  title = 	 {{Scientific Workflow Management -- For Whom?}},
+  booktitle = {{Proceedings of 10th IEEE International Conference on e-Science (e-Science 2014)}},
+  year = 	 {2014},
+  pages = 	 {298--305},
+  publisher = {{IEEE Press}}
+}
+
+@Article{ofria+wilke:2004,
+  author = 	 {Charles Ofria and Claus O. Wilke},
+  title = 	 {{Avida: A Software Platform for Research in Computational Evolutionary Biology}},
+  journal = 	 {{Artificial Life}},
+  year = 	 {2004},
+  volume = 	 {10},
+  number = 	 {2},
+  pages = 	 {191--229}
+}
+
+@Article{vardi-cacm-2014,
+  author =       {Moshe Y. Vardi},
+  title =        {{Openism, IPism, Fundamentalism, and Pragmatism}},
+  journal =      {{Communications of the ACM}},
+  volume =       {57},
+  number =       {8},
+  year =         {2014}
+} 
