--- a/jors2015.bib
+++ b/jors2015.bib
@@ -1,9 +1,10 @@
 @TechReport{collberg-et-al:2014,
-  author = 	 {Christian Collbery and Todd Proebsting and Gina Moraila and Akash Shankaran and Zuoming Shi and Alex M. Warren},
+  author = 	 {Christian Collberg and Todd Proebsting and Gina Moraila and Akash Shankaran and Zuoming Shi and Alex M. Warren},
   title = 	 {{Measuring Reproducibility in Computer Systems Research}},
   institution =  {Department of Computer Science, University of Arizona},
   year = 	 {2014}
 }
+
 @article{Miller2006,
 	author = {Greg Miller}, 
 	title = {{A Scientist's Nightmare: Software Problem Leads to Five Retractions}},
