--- a/jors2015.tex
+++ b/jors2015.tex
@@ -7,7 +7,7 @@
 \usepackage{authblk}
 \usepackage{siunitx}
 \usepackage[noadjust]{cite}
-\usepackage[pdftex,colorlinks=true,hyperfootnotes=false]{hyperref}
+\usepackage[pdftex,colorlinks=true]{hyperref}
 
 
 % title
@@ -15,16 +15,19 @@
 %\title{``Reproducibility-as-a-Service'':\\A Model for Reproducible Computational Research}
 %\title{``Can I Implement Your Algorithm?'':\\A Model for Reproducible Research Software}
 
+% names
 \author[1]{Tom Crick}
-\author[2]{Samin Ishtiaq}
-\author[3]{Benjamin A. Hall}
+\author[2]{Benjamin A. Hall}
+\author[3]{Samin Ishtiaq}
+% affiliation
 \affil[1]{Department of Computing \& Information Systems, Cardiff
   Metropolitan University, UK}
-\affil[2]{Microsoft Research Cambridge, UK}
-\affil[3]{MRC Cancer Unit, University of Cambridge, UK}
+\affil[2]{MRC Cancer Unit, University of Cambridge, UK}
+\affil[3]{Microsoft Research Cambridge, UK}
+% emails
 \affil[1]{\protect\url{tcrick@cardiffmet.ac.uk}}
-\affil[2]{\protect\url{samin.ishtiaq@microsoft.com}}
-\affil[3]{\protect\url{bh418@mrc-cu.cam.ac.uk}}
+\affil[2]{\protect\url{bh418@mrc-cu.cam.ac.uk}}
+\affil[3]{\protect\url{samin.ishtiaq@microsoft.com}}
 
 \renewcommand\Authands{ and }
 \def\UrlBreaks{\do\/\do-}
