Changed ref style

--- a/jors2015.tex
+++ b/jors2015.tex
@@ -631,7 +631,7 @@ worthwhile and address it, or don't bother doing it at all.
 
 
 % BibTeX
-\bibliographystyle{unsrt}
+\bibliographystyle{ieeetr}
 \bibliography{jors2015}
 
 \end{document}
