--- a/jors2015.tex
+++ b/jors2015.tex
@@ -554,12 +554,12 @@ system.  The cloud pulls in all the dependencies your code needs, on
 the platforms you specify, and runs all the benchmarks. This happens
 every time you push. It also happens every time one of your
 dependencies (a library, a firmware upgrade for your platform, a new
-API) changes too. This system (presented in Figure~\ref{fig:workflow}) woud
-integrate with publicly available source code repositories, automates
-the build, testing and benchmarking of algorithms and benchmarks. It
-would allow testing models against competing algorithms, and the
-addition of new models to the test suite (either manually or from
-existing online repositories).
+API) changes too. This system (presented in Figure~\ref{fig:workflow})
+would integrate with publicly available source code repositories,
+automates the build, testing and benchmarking of algorithms and
+benchmarks. It would allow testing models against competing
+algorithms, and the addition of new models to the test suite (either
+manually or from existing online repositories).
 
 \begin{figure}[!ht]
 \centering
