--- a/jors2015.tex
+++ b/jors2015.tex
@@ -227,11 +227,9 @@ discussion of the specifics of any particular licences, BSD and Apache are good,
 flexible ones.\\
 % IANAL...
 
-Ultimately: set the code free. Put it on a public space such as
-GitHub, where it is easy to share and fork. You should embrace the
-spirit of the (somewhat tongue-in-cheek) CRAPL academic-strength open
-source license\footnote{\url{http://matt.might.net/articles/crapl/}}
-and publish your code -- it is good enough~\cite{barnes:2010}.
+\noindent Ultimately: set the code free and make it available on a public
+repository such as GitHub, where it is easy to share and fork -- it is
+good enough~\cite{barnes:2010}.
 
 % Recommendation III
 \subsection{{\emph{Be A Better Person}}}
