--- a/jors2015.tex
+++ b/jors2015.tex
@@ -460,9 +460,10 @@ which is not ideal for sharing and reproducibility.\\
 \noindent {\textbf{Recommendation {\textrm{V}}:}} Despite these
 challenges to testing, unshared code is ultimately untestable.
 Testing new complex scientific software is difficult -- until the
-software is complete, unit tests may not be available. You should thus
-aim to link to/from publicly-shared code: shared code is inherently more
-test-able.
+software is complete, unit tests may not be available. You should aim
+to re-use modules or repos (git submodules) from publicly-shared
+code. An implication of Linus's Law (``given enough eyeballs, all bugs
+are shallow'') might be that shared code is inherently more test-able.
 
 
 % Recommendation X
