An intro to Sec 3, to make Sec 2 flow into Sec 3 better.

--- a/jors2015.tex
+++ b/jors2015.tex
@@ -494,6 +494,19 @@ great start that begin to expose what can be done in this area.
 \section{A Model for Reproducible Research Software}\label{sec:conclusion} 
 %\section{Conclusions: A New Model}
 
+Some of the Recommendations above, like ``Be A Better Person'' or
+``The Lingua Franca'', are abstract, airy-fairy, pie-in-the-sky
+even. However, most of them can be concretely realized by a service
+for reproducibility. This service provides a concrete implementation
+of free source code (``Set The Code Free'') that depends on other free
+source code (``Lineage'') building (``YMMV'', ``Welcome to Web 2.0'')
+and running tests contributed in public (``Data Representations'',
+``World Records'') in a completely reproducible regime.
+
+The service we describe here can be seen as a specification. We
+haven't built it, but many servics like travis-ci or Azure VSTS
+provide some of the mechanical parts of it. 
+
 A service for reproducibility is intended to play three important
 roles. It should:
 
