--- a/jors2015.tex
+++ b/jors2015.tex
@@ -155,7 +155,7 @@ on the fundamental scientific tenets of openness and sharing.
 % Recommendation I
 \subsection{{\emph{Can I Implement Your Algorithm?}}}
 
-Reproducibility (replication, repeatability, et al.) is a fundamental tenet of
+Reproducibility is a fundamental tenet of
 good science. Yet many descriptions of algorithms are too high-level,
 too obscure, too poorly-defined to allow an easy re-implementation by
 a third party. A step in the algorithm might say: ``{\emph{We pick an
