Use Typescript rather than Javascript. Closes #9.

--- a/jors2015.tex
+++ b/jors2015.tex
@@ -307,9 +307,10 @@ crystallography led to the retraction of five
 papers~\cite{Miller2006}, due to a bug which inverted the phases.\\
 
 \noindent {\textbf{Recommendation {\textrm{IV}}:}} The use of a
-principled, high-level programming language in which to write your
-software helps hugely with the maintainability, robustness and
-openness of the software produced.
+principled, high-level, typed programming language in which to write
+your software helps hugely with the maintainability, robustness and
+openness of the software produced. Use Typescript or Flow rather than
+plain old Javascript; use Hack rather than PHP. 
 
 % Recommendation VI
 \subsection{{\emph{Lineage (or: ``Standing On The Shoulders Of Giants'')}}}
