--- a/jors2015.tex
+++ b/jors2015.tex
@@ -11,7 +11,8 @@
 
 
 % title
-\title{Towards ``Reproducibility-as-a-Service''}
+\title{Reproducibility in Research: Systems, Infrastructure, Culture}
+%\title{Towards ``Reproducibility-as-a-Service''}
 %\title{``Reproducibility-as-a-Service'':\\A Model for Reproducible Computational Research}
 %\title{``Can I Implement Your Algorithm?'':\\A Model for Reproducible Research Software}
 
