--- a/jors2015.tex
+++ b/jors2015.tex
@@ -21,9 +21,8 @@
 \author[2]{Benjamin A. Hall}
 \author[3]{Samin Ishtiaq}
 % affiliation
-\affil[1]{Department of Computing \& Information Systems, Cardiff
-  Metropolitan University, UK}
-\affil[2]{MRC Cancer Unit, University of Cambridge, UK}
+\affil[1]{Cardiff Metropolitan University, UK}
+\affil[2]{University of Cambridge, UK}
 \affil[3]{Microsoft Research Cambridge, UK}
 % emails
 \affil[1]{\protect\url{tcrick@cardiffmet.ac.uk}}
@@ -267,7 +266,7 @@ computational skills are taught as core at undergraduate and
 postgraduate level.
 
 % Recommendation IV
-\subsection{{\emph{The Lingua Franca of Computational Science}}}
+\subsection{{\emph{The Lingua Franca of Computational Research}}}
 
 There is no other scientific or technical field where its participants
 can just make up a non-principled artefact like a programming language
